Fixed buttons being highlighted on mobile

--- a/Web Interface/esp-monitor/src/index.css
+++ b/Web Interface/esp-monitor/src/index.css
@@ -6,6 +6,14 @@ body {
     font-family: "Open Sans", sans-serif;
 }
 
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
